mobile view products alignment issue resolved

--- a/src/components/MainMenu/scss/index.scss
+++ b/src/components/MainMenu/scss/index.scss
@@ -127,6 +127,9 @@
 
     svg {
       vertical-align: bottom;
+      path {
+        fill: #5fbe43
+      }
     }
   }
   @media(max-width:424px){
